--- a/OBeautifulCode.Reflection/packages.config
+++ b/OBeautifulCode.Reflection/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="OBeautifulCode.Build.Analyzers" version="1.1.9-stylecopprerelease" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.9-stylecopprerelease" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.18" targetFramework="net461" developmentDependency="true" />
-  <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.8" targetFramework="net461" developmentDependency="true" />
-  <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.21" targetFramework="net461" developmentDependency="true" />
+  <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.20" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.11" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.31" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Validation.Recipes.ParameterValidator" version="1.0.11" targetFramework="net462" developmentDependency="true" />
   <package id="Spritely.Recipes.MustValidation" version="0.6.3" targetFramework="net461" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net462" developmentDependency="true" />
 </packages>
