--- a/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
+++ b/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
@@ -51,6 +51,7 @@
     <Compile Include=".recipes\OBeautifulCode.Enum\EnumExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Math\HashCodeHelper.cs" />
     <Compile Include=".recipes\OBeautifulCode.String\StringExtensions.cs" />
+    <Compile Include=".recipes\OBeautifulCode.Type\TypeExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Validation\ApplyBecause.cs" />
     <Compile Include=".recipes\OBeautifulCode.Validation\DictionaryExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Validation\Parameter.cs" />
@@ -68,7 +69,6 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader.cs" />
-    <Compile Include="TypeHelper.cs" />
     <Compile Include="ReflectionHelper.Attribute.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="ReflectionHelper.Enum.cs" />
@@ -80,9 +80,6 @@
     <None Include=".analyzers\release.ruleset" />
     <None Include="AssemblyHelper.recipe-nuspec" />
     <None Include="OBeautifulCode.Reflection.override-nuspec" />
-    <None Include="TypeHelper.recipe-nuspec">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="AssemblyLoader.recipe-nuspec">
       <SubType>Designer</SubType>
     </None>
