--- a/OBeautifulCode.Reflection/packages.config
+++ b/OBeautifulCode.Reflection/packages.config
@@ -6,6 +6,7 @@
   <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.15" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Math.Recipes.HashCodeHelper" version="1.0.70" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.40" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Type.Recipes.TypeExtensions" version="1.0.16" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Validation.Recipes.ParameterValidator" version="1.0.25" targetFramework="net462" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net462" developmentDependency="true" />
 </packages>
