--- a/OBeautifulCode.Reflection.Recipes/packages.config
+++ b/OBeautifulCode.Reflection.Recipes/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OBeautifulCode.Assertion.Recipes.Must" version="1.0.9" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Build.Analyzers" version="1.1.42" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.42" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.30" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.15" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Math.Recipes.HashCodeHelper" version="1.0.70" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.40" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Type.Recipes.TypeExtensions" version="1.0.16" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Validation.Recipes.ParameterValidator" version="1.0.25" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.38" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.18" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Equality.Recipes.EqualityHelpers" version="1.0.6" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.42" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Type.Recipes.TypeExtensions" version="1.0.25" targetFramework="net462" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net462" developmentDependency="true" />
 </packages>
