--- a/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
+++ b/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
@@ -88,6 +88,7 @@
     <Compile Include=".recipes\OBeautifulCode.Type\TypeExtensions.cs" />
     <Compile Include="AssemblyHelper.cs" />
     <Compile Include="CompressionMethod.cs" />
+    <Compile Include="AppDomainHelper\DisposableAppDomain.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader.cs" />
@@ -96,10 +97,12 @@
     <Compile Include="ReflectionHelper.Enum.cs" />
     <Compile Include="ReflectionHelper.Field.cs" />
     <Compile Include="ReflectionHelper.Property.cs" />
+    <Compile Include="AppDomainHelper\AppDomainHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include=".analyzers\stylecop.json" />
     <None Include=".analyzers\release.ruleset" />
+    <None Include="AppDomainHelper.recipe-nuspec" />
     <None Include="AssemblyHelper.recipe-nuspec" />
     <None Include="AssemblyLoader.recipe-nuspec">
       <SubType>Designer</SubType>
@@ -117,6 +120,7 @@
   <ItemGroup>
     <Content Include=".analyzers\dictionary.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OBeautifulCode.Build.Analyzers.1.1.91\build\OBeautifulCode.Build.Analyzers.targets" Condition="Exists('..\packages\OBeautifulCode.Build.Analyzers.1.1.91\build\OBeautifulCode.Build.Analyzers.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
