--- a/OBeautifulCode.Reflection.Recipes.Test/OBeautifulCode.Reflection.Recipes.Test.csproj
+++ b/OBeautifulCode.Reflection.Recipes.Test/OBeautifulCode.Reflection.Recipes.Test.csproj
@@ -123,6 +123,7 @@
     <Compile Include=".recipes\OBeautifulCode.Type\TypeExtensions.cs" />
     <Compile Include="AssemblyLoaderTest.cs" />
     <Compile Include="AssemblyHelperTest.cs" />
+    <Compile Include="AppDomainHelperTest.cs" />
     <Compile Include="TypesForTesting\NullAndNotNullFields.cs" />
     <Compile Include="TypesForTesting\NullAndNotNullProperties.cs" />
     <Compile Include="TypesForTesting\Attributes.cs" />
@@ -160,6 +161,7 @@
   <ItemGroup>
     <Content Include=".analyzers\dictionary.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
