--- a/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
+++ b/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
@@ -93,6 +93,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader\AssemblyLoader.cs" />
+    <Compile Include="ReflectionHelper\ReflectionHelper.MemberInfo.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.Attribute.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.Enum.cs" />
