--- a/OBeautifulCode.Reflection.Recipes/packages.config
+++ b/OBeautifulCode.Reflection.Recipes/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OBeautifulCode.Bootstrapper.Recipes.Core" version="1.0.41" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Bootstrapper.Recipes.Recipe" version="1.0.41" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Build.Analyzers" version="1.1.126" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.126" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.CodeAnalysis.Recipes.SuppressBecause" version="1.0.6" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Bootstrapper.Recipes.Core" version="1.0.43" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Bootstrapper.Recipes.Recipe" version="1.0.43" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Build.Analyzers" version="1.1.134" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.134" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Build.Properties.ProjectInfo" version="1.1.132" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.CodeAnalysis.Recipes.SuppressBecause" version="1.0.8" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.46" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.22" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.23" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Equality.Recipes.EqualityHelpers" version="1.0.22" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.47" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Type.Recipes.TypeExtensions" version="1.0.69" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Type.Recipes.TypeExtensions" version="1.0.71" targetFramework="net462" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net462" developmentDependency="true" />
 </packages>
